Part1/Exercise_1.07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 3011
      protocol: TCP
      targetPort: 3011
